--- a/app/less/restaurant.less
+++ b/app/less/restaurant.less
@@ -6,6 +6,9 @@
     background-size: 1em 1em;
 }
 
+.shadow () {
+    box-shadow: 8px 8px 8px 2px  rgba(0,0,0,0.5);
+}
 
 
 html, body {
@@ -50,18 +53,18 @@ figure.table {
     width: 1em;
     height: 1em;
     text-align: center;
-    
+
     background: gray;
 
     border: 2px solid gray;
     color: rgba(232,232,0,1);
-    box-shadow: 8px 8px 8px 2px  rgba(0,0,0,0.5);
+    .shadow();
     text-shadow: 1px 1px  4px  rgba(0,0,0,0.7), -1px -1px  4px  rgba(255,255,255,0.7);
 
     &[data-state='OCCUPIED'] {
         .cerata();
     }
-    
+
     &.selected {
         position: absolute;
         top: 2em;
@@ -76,12 +79,26 @@ figure.table {
             color: black;
             list-style-type: none;
         }
-
+        > menu {
+            opacity: 1;
+        }
     }
 
     > ul {
         display: none;
         font-size: 0.6em;
+    }
+    > menu {
+        position: absolute;
+        right: 1em;
+        bottom: 1em;
+        opacity: 0;
+        
+        > button {
+            font-size: 32px;
+            border-radius: 25%;
+            .shadow();
+        }
     }
 }
 
